--- a/app/404-page.html
+++ b/app/404-page.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>error 404</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
-  <header class="header">
+  <header class="header header--404">
     <div class="container">
       <div class="header__inner">
         <a class="logo" href="#">
@@ -46,7 +46,20 @@
     </div>
   </header>
   <main class="main">
-
+    <section class="page-404">
+      <div class="container container--404">
+        <div class="page-404__inner">
+          <div class="page-404__content">
+            <h2 class="page-404__title">OPPS! Page Not Found!!</h2>
+            <p class="page-404__text">
+              We,re sorry but we can’t seem to find the pages you request. This might be because you have typed the web address not find incorrectly.
+            </p>
+            <a class="page-404__link" href="#">BACK TO HOME</a>
+          </div>
+          <img class="page-404__img" src="images/404.png" alt="404 image">
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
